# AgentOps

./: README.md
.github/workflows/: ci.yml
apps/agent-runtime/: pyproject.toml  test_results.txt
apps/agent-runtime/agent/: __init__.py  base.py  crews.py  graph.py  main.py  memory.py  nodes.py  state.py
apps/agent-runtime/agent/agents/: __init__.py  orchestrator.py
apps/agent-runtime/agent/agents/specialists/: __init__.py  browser_agent.py  code_agent.py  data_agent.py  devops_agent.py  monitoring_agent.py  research_agent.py
apps/agent-runtime/agent/agents/workers/: __init__.py  git_commit_worker.py  log_parser_worker.py  slack_notify_worker.py
apps/agent-runtime/agent/tools/: __init__.py  base_tool.py  code_runner.py  file_reader.py  sql_runner.py  web_search.py
apps/agent-runtime/tests/: __init__.py  conftest.py  test_base_agent.py  test_graph.py  test_memory.py  test_tools.py
apps/api-gateway/: pyproject.toml
apps/api-gateway/tests/: test_generated_tools.py
apps/ui/: .eslintrc.json
apps/ui/src/: App.tsx
